# muzika

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .gitmodules  COPYING  NOTES.md  README.md  com.vixalien.muzika.json  eslint.config.js  generated-sources.json  meson.build  meson_options.txt  muzika.flatpakref  package.json  tsconfig.json  yarn.lock.bak
data/: com.vixalien.muzika.appdata.xml.in  com.vixalien.muzika.appdata.xml.in.in  com.vixalien.muzika.data.gresource.xml  com.vixalien.muzika.data.gresource.xml.in  com.vixalien.muzika.desktop.in  com.vixalien.muzika.desktop.in.in  com.vixalien.muzika.gschema.xml  com.vixalien.muzika.gschema.xml.in  com.vixalien.muzika.metainfo.xml.in.in  meson.build  org.example.TypescriptTemplate.appdata.xml.in  org.example.TypescriptTemplate.data.gresource.xml  org.example.TypescriptTemplate.desktop.in  org.example.TypescriptTemplate.gschema.xml  style.css  window.blp  window.ui
data/components/: albumcard.ui  artistcard.ui  carousel.ui  dynamic-image.blp  dynamic-image.ui  flatsong.ui  largeplaylistheader.ui  load-more.ui  loading.blp  loading.ui  miniplaylistheader.ui  paginator.blp  paginator.ui  playlist.ui  playlistcard.ui  playlistitem.ui  songcard.ui  videocard.ui
data/components/album/: item.blp  item.ui
data/components/carousel/: albumcard.blp  albumcard.ui  artistcard.blp  artistcard.ui  card.ui  carousel.blp  carousel.ui  flatsong.blp  flatsong.ui  playlistcard.blp  playlistcard.ui  songcard.blp  songcard.ui  videocard.blp  videocard.ui  watchplaylistcard.blp  watchplaylistcard.ui
data/components/nav/: page.blp  page.ui
data/components/navbar/: button.blp  button.ui  index.blp  index.ui  section.ui  title.ui
data/components/player/: lyrics.blp  lyrics.ui  mini.ui  queue.blp  queue.ui  queueitem.blp  queueitem.ui  related.blp  related.ui  view.blp  view.ui
data/components/playlist/: item.blp  item.ui  largeheader.blp  largeheader.ui  largeplaylistheader.ui  miniheader.blp  miniheader.ui  miniplaylistheader.ui  playlistitem.ui
data/components/search/: inlinecard.blp  inlinecard.ui  page.ui  section.blp  section.ui  songcard.blp  topresult.blp  topresult.ui  topresultsection.blp  topresultsection.ui
data/icons/: meson.build
data/pages/: album.blp  album.ui  artist.blp  artist.ui  authentication-error.blp  authentication-error.ui  error.blp  error.ui  home.ui  login.blp  login.ui  playlist.blp  playlist.ui  search.blp  search.ui
data/ui/: meson.build  sidebar.blp  window.blp  window.ui
data/ui/components/: dynamic-action.blp  dynamic-image-2.blp  dynamic-image.blp  dynamic-image.ui  loading.blp  paginator.blp  paginator.ui  playlist-image.blp  playlist-image.ui
data/ui/components/album/: item.blp  item.ui
data/ui/components/carousel/: card.blp  card.ui  carousel.blp  flatcard.blp  flatsong.blp  flatsong.ui  moodbox.blp
data/ui/components/nav/: page.blp  page.ui
data/ui/components/navbar/: button.blp  button.ui  index.blp  index.ui  section.blp  title.blp
data/ui/components/player/: full.blp  full.ui  lyrics.blp  lyrics.ui  mini.blp  mini.ui  now-playing-details.blp  preview.blp  queue.blp  queue.ui  queueitem.blp  queueitem.ui  related.blp  related.ui
data/ui/components/playlist/: add-to-playlist-item.blp  bar.blp  edit.blp  (+10 more)
data/ui/gtk/: help-overlay.blp
data/ui/layout/: panes.blp  shell.blp  sidebar.blp
data/ui/pages/: album.blp  album.ui  artist-albums.blp  artist.blp  artist.ui  authentication-error.blp  authentication-error.ui  channel-playlists.blp  channel.blp  charts.blp  error.blp  error.ui  explore.blp  home.blp  home.ui  login.blp  login.ui  mood-playlists.blp  moods.blp  new-releases.blp  playlist.blp  playlist.ui  preferences.blp  search.blp
src/: application.ts  com.vixalien.muzika.in  com.vixalien.muzika.src.gresource.xml  endpoints.ts  fetch.ts  main.ts  meson.build  mpris.ts  muse.ts  navigation.ts  org.example.TypescriptTemplate.data.gresource.xml  org.example.TypescriptTemplate.src.gresource.xml  pages.ts  sidebar.ts  window.ts  window.ui
src/components/: adaptive-picture.ts  annotated-view.ts  artist.ts  artistheader.ts  carousel.ts  dynamic-action.ts  dynamic-image-2.ts  dynamic-image.ts  fixed-ratio-thumbnail.ts  home.ts  inline-tab-switcher.ts  load-more.ts  loading.ts  marquee.ts  maxheight.ts  paginator.ts  playlist-image.ts  playlist.ts  playlistheader.ts  scrolled-view.ts  search.ts  webimage.ts
src/components/album/: header.ts  item.ts
src/components/carousel/: albumcard.ts  artistcard.ts  card.ts  flatcard.ts  flatsongcard.ts  index.ts  playlistcard.ts  songcard.ts  videocard.ts  watchplaylistcard.ts
src/components/grid/: index.ts
src/components/nav/: page.ts
src/components/navbar/: button.ts  index.ts  section.ts  title.ts
src/components/player/: full.ts  lyrics.ts  mini.ts  now-playing-details.ts  preview.ts  progress.ts  queue.ts  queueitem.ts  related.ts  scale.ts  sidebar.ts  view.ts
src/components/playlist/: add-to-playlist-item.ts  bar.ts  columnview.ts  edit.ts  get_add_to_playlist.ts  header.ts  item.ts  itemview.ts  listitem.ts  listview.ts  save-to-playlist.ts
src/components/search/: inlinecard.ts  section.ts  topresultcard.ts  topresultsection.ts
src/layout/: panes.ts  shell.ts  sidebar.ts
src/navbar/: button.ts  index.ts  section.ts  title.ts
src/pages/: album.ts  artist-albums.ts  artist.ts  authentication-error.ts  channel-playlists.ts  channel.ts  charts.ts  error.ts  explore.ts  home.ts  login.ts  mood-playlists.ts  moods.ts  new-releases.ts  playlist.ts  preferences.ts  search.ts
src/player/: helpers.ts  index.ts  mpd.ts  muzika.ts  queue.ts  signal-adapter.ts  stream.ts
src/polyfills/: abortcontroller.ts  base64.ts  customevent.ts  domexception.ts  fetch.ts
src/util/: action.ts  giofilestore.ts  hash.ts  hold.ts  label.ts  language.ts  list.ts  menu.ts  objectcontainer.ts  orientation.ts  playablelist.ts  portals.ts  scrolled.ts  secret-store.ts  settings.ts  signal-listener.ts  text.ts  time.ts  volume.ts  window.ts
src/util/controllers/: background.ts  hold.ts  inhibit.ts
src/util/menu/: index.ts  library.ts  like.ts
(+771 files in other folders)
