blueprint_files = [
  'components/carousel/card.blp',
  'components/carousel/carousel.blp',
  'components/carousel/flatcard.blp',
  'components/carousel/moodbox.blp',
  'components/dynamic-action.blp',
  'components/dynamic-image.blp',
  'components/library/history.blp',
  'components/library/songs.blp',
  'components/library/view.blp',
  'components/loading.blp',
  'components/nav/page.blp',
  'components/navbar/button.blp',
  'components/navbar/index.blp',
  'components/navbar/title.blp',
  'components/paginator.blp',
  'components/player/now-playing/details/lyrics.blp',
  'components/player/now-playing/details/queue.blp',
  'components/player/now-playing/details/queueitem.blp',
  'components/player/now-playing/details/related.blp',
  'components/player/now-playing/counterpart-switcher.blp',
  'components/player/now-playing/cover.blp',
  'components/player/now-playing/sheet.blp',
  'components/player/now-playing/volume-control.blp',
  'components/player/video/controls.blp',
  'components/player/video/view.blp',
  'components/player/video/volume-controls.blp',
  'components/player/full.blp',
  'components/player/mini.blp',
  'components/player/preview.blp',
  'components/playlist/add-to-playlist-item.blp',
  'components/playlist/bar.blp',
  'components/playlist/edit.blp',
  'components/playlist/header.blp',
  'components/playlist/listitem.blp',
  'components/playlist/save-to-playlist.blp',
  'components/search/section.blp',
  'components/search/topresult.blp',
  'components/search/topresultsection.blp',
  'gtk/help-overlay.blp',
  'layout/sidebar.blp',
  'layout/panes.blp',
  'layout/shell.blp',
  'pages/album.blp',
  'pages/artist-albums.blp',
  'pages/artist.blp',
  'pages/authentication-error.blp',
  'pages/channel.blp',
  'pages/charts.blp',
  'pages/channel-playlists.blp',
  'pages/error.blp',
  'pages/explore.blp',
  'pages/home.blp',
  'pages/login.blp',
  'pages/mood-playlists.blp',
  'pages/moods.blp',
  'pages/new-releases.blp',
  'pages/playlist.blp',
  'pages/preferences.blp',
  'pages/search.blp',
  'window.blp',
]

blueprints = custom_target('blueprints',
  input: blueprint_files,
  output: 'ui',
  command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
)

ui_xml = ''

foreach blueprint_file : blueprint_files
  ui_xml += '<file preprocess="xml-stripblanks">ui/@0@</file>\n    '.format(blueprint_file.replace('.blp', '.ui'))
endforeach
